--- a/app/views/etsy/search.html.erb
+++ b/app/views/etsy/search.html.erb
@@ -1,1 +1,40 @@
-<%= "This is the search template" %>
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <!-- Place favicon.ico in the root directory -->
+    </head>
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+        <!-- Add your site or application content here -->
+        <div id="header">
+            <h1 id="logo"><a href="#">Etsy</a></h1>
+
+            <form id="search">
+                <input id="search-query" name="q">
+                <input type="submit" value="Search">
+            </form>
+
+            <ul id="header-nav">
+                <li><a href="#" title="Home">Home</a></li>
+                <li><a href="#" title="Favorites">Favorites</a></li>
+                <li><a href="#" title="You">You</a></li>
+                <li><a href="#" title="Cart">Cart</a></li>
+            </ul>
+        </div>
+
+        <div id="content"><%= @results %></div>
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
+    </body>
+</html>
