--- a/app/views/etsy/search.html.erb
+++ b/app/views/etsy/search.html.erb
@@ -4,12 +4,10 @@
     <head>
          <title>Etsy Searcher</title>
     </head>
-
-    <body>
         <header>
             <div class="leftside">
               <h1>
-                <a hef="#"><img src="https://www.etsy.com/assets/dist/images/etsylogo.20150106184300.png"/a>
+                <a hef="#"><img src="https://www.etsy.com/assets/dist/images/etsylogo.20150106184300.png"></a>
               </h1>
               <div class="search-bar">
                   <form>
@@ -23,56 +21,59 @@
                 <ul>
                     <li class="help"><a href="#">Help</a></li>
                     <li><a href="#">Register</a></li>
-                    <li><a href="#">Sign In</a></li>
+                    <li><id="sign-in"><a href="#">Sign In</a></li>
                     <li><a href="#">Cart</a></li>
                 </ul>
             </div>
         </header>
-        <div class="sidebar">
-        <p class="returned">Show Results For:</p>
-          <h3>Item Type</h3>
-          <div class="whiskey">
-          <li><a href="#">All Items</a></li>
-          <li><a href="#">Handmade</a></li>
-          <li><a href="#">Vintage</a></li>
-          <li><a href="#">Craft Supplies</a></li>
-        </div>
-
-        <h3>Categories</h3>
-        <div class="handmade-list">
-            <li><a href="#">Handmade</a></li>
-            <li><a href="#">Glass</a></li>
-            <li><a href="#">Weddings</a></li>
-            <li><a href="#">Housewares</a></li>
-            <li><a href="#">Accessories</a></li>
-            <li><a href="#">Art</a></li>
-            <li><a href="#">Jewelry</a></li>
-            <li><a href="#">Ceremaics and Pottery</a></li>
-            <li><a href="#">Clothing</a></li>
-        </div>
-        <div class="vintage-list">
-            <li><a href="#">Collectibles</a></li>
-            <li><a href="#">Serving</a></li>
-            <li><a href="#">Housewares</a></li>
-            <li><a href="#">Antique</a></li>
-        </div>
-        <div class="craft-supplies-list">
-            <li><a href="#">Bead</a></li>
-            <li><a href="#">Commercial</a></li>
-            <li><a href="#">Scrapbooking</a></li>
-            <li><a href="#">Fabric</a></li>
-        </div>
-        <div class="search-results"
+        <body>
+          <div class="content">
+            <div class="sidebar">
+              <p class="returned">Show Results For:</p>
+              <h3>Item Type</h3>
+              <div class="whiskey">
+                <li><a href="#">All Items</a></li>
+                <li><a href="#">Handmade</a></li>
+                <li><a href="#">Vintage</a></li>
+                <li><a href="#">Craft Supplies</a></li>
+            </div>
+              <h3>Categories</h3>
+                <ul class="categories">
+                  <li><a href="#">Handmade</a></li>
+                  <li><a href="#">Glass</a></li>
+                  <li><a href="#">Weddings</a></li>
+                  <li><a href="#">Housewares</a></li>
+                  <li><a href="#">Accessories</a></li>
+                  <li><a href="#">Art</a></li>
+                  <li><a href="#">Jewelry</a></li>
+                  <li><a href="#">Ceremaics and Pottery</a></li>
+                  <li><a href="#">Clothing</a></li>
+                </ul>
+            <div class="search-text">
+              <p>Refine your search</p>
+            </div>
+            <div class="search-refine">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+            </div>
+            </div>
+        <div class="listings"
             <% @results.each do |x| %>
                 <div class="results-box">
                     <%= link_to x["url"] do %>
                       <%= image_tag x["Images"][0]['url_170x135'], size: "214x170" %>
                     <% end %>
-                    <div class="result-details">
+                    <div class="listing-details">
                         <div class="item-title">
                             <%= x['title'][0, 32] %>
                         </div>
-                        <div class="details">
+                        <div class="">
                             <div class="shop-name">
                               <%= "#{x['Shop']['shop-name']}" %>
                             </div>
@@ -84,7 +85,6 @@
                 </div>
             <% end %>
         </div>
-    </body>
-
+        </body>
 
  </html>
